--- a/themes/takepart3/css/wysiwyg.css
+++ b/themes/takepart3/css/wysiwyg.css
@@ -42,10 +42,21 @@ blockquote{
 	quotes: none;
 	line-height:24px;
 }
+/*
 .caption {
   font-size: 11px;
   color: #999;
   line-height: normal;
   border-bottom: 1px dotted #999;
   padding: 15px 0;
+}
+*/
+.photo-wrapper{
+    margin: 0 10px 25px;   
+    border-bottom: 1px dotted #999;
+    color: #999;
+    font-size: 11px;
+    line-height: normal;
+    padding:0 0 15px 0;
+    text-align:center; 
 }
